refactor: updated SecurityConfiguration